// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render exepenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $2,351,235.84
  </h1>
</div>
`;

exports[`should correctly render exepenses summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $2.35
  </h1>
</div>
`;
